objects/vlocity_cmt__CachedAPIResponseOffers__c.object
<CustomObject>
    <description>This will have the mapping of the code of the offers present under that Cachekey.</description>
    <fields>
        <fullName>vlocity_cmt__CachedAPIResponseId__c</fullName>
        <label>CachedAPIResponseId</label>
        <referenceTo>vlocity_cmt__CachedAPIResponse__c</referenceTo>
        <relationshipLabel>Cached API Response Relationships</relationshipLabel>
        <relationshipName>CachedAPIResponse_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferCode__c</fullName>
        <description>This will store the code of the offers present under that Cachekey.</description>
        <externalId>true</externalId>
        <label>OfferCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OfferId__c</fullName>
        <description>This will store the unique Id of a specific version of a product which got impacted due to the changes made on SObjects.</description>
        <label>OfferId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CachedAPIResponseOffers</label>
    <nameField>
        <label>CachedAPIResponseOffers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIResponseOffers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>